--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,13 @@
-asgiref==3.3.4
-Django==3.2.3
+aniso8601==7.0.0
+asgiref==3.5.2
+certifi==2021.10.8
+cffi==1.15.0
+charset-normalizer==2.0.7
+cryptography==36.0.0
+defusedxml==0.7.1
+Django==4.0.4
+django-allauth==0.46.0
+django-ckeditor==6.2.0
 django-codemirror2==0.2
 django-cors-headers==3.7.0
 django-crispy-forms==1.11.2
@@ -13,5 +21,10 @@ Pillow==8.2.0
 pytz==2019.3
 PyYAML==5.4.1
 river-admin==0.6.0
+Rx==1.6.1
+singledispatch==3.7.0
 six==1.16.0
 sqlparse==0.3.0
+text-unidecode==1.3
+tzdata==2022.1
+urllib3==1.26.7
