--- a/requirements.txt
+++ b/requirements.txt
@@ -6,16 +6,11 @@ charset-normalizer==2.0.7
 cryptography==36.0.0
 defusedxml==0.7.1
 Django==4.0.4
-django-allauth==0.46.0
-django-ckeditor==6.2.0
-django-codemirror2==0.2
-django-cors-headers==3.7.0
-django-crispy-forms==1.11.2
 django-cte==1.1.4
 django-js-asset==1.2.2
 django-mptt==0.9.1
 django-river==3.2.0
-djangorestframework==3.12.4
+gunicorn==20.1.0
 mock==4.0.3
 Pillow==9.1.1
 pytz==2019.3
@@ -28,3 +23,4 @@ sqlparse==0.3.0
 text-unidecode==1.3
 tzdata==2022.1
 urllib3==1.26.7
+whitenoise==6.1.0
